--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,9 @@
 file(GLOB_RECURSE test_sources "*.cpp")
 file(GLOB_RECURSE test_headers "*.h")
 
-add_executable(test ${test_sources} ${test_headers})
+add_executable(test_all ${test_sources} ${test_headers})
+target_link_libraries(test_all PUBLIC tiralabra_lib gtest)
 
-add_test(test_all test)
-target_link_libraries(test PUBLIC tiralabra_lib gtest)
+include(GoogleTest)
+enable_testing()
+gtest_discover_tests(test_all)
