--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,5 +5,5 @@ add_executable(test_all ${test_sources} ${test_headers})
 target_link_libraries(test_all PUBLIC tiralabra_lib gtest)
 
 include(GoogleTest)
-enable_testing()
+#enable_testing()
 gtest_discover_tests(test_all)
