--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.10)
 project(tiralabra)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3")
+set(CMAKE_CXX_FLAGS "-Wall -Wextra -O3 -march=native")
 
 OPTION(coverage "Code coverage" OFF)
 if(coverage)
@@ -14,4 +14,5 @@ include_directories("src")
 
 add_subdirectory("src")
 add_subdirectory("test")
+add_subdirectory("test_perf")
 add_subdirectory("extern/googletest")
